add comment page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Rankings Analysis</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;500;600;700&display=swap">
 </head>
 <body>
     <!-- Continuous background image -->
@@ -101,6 +102,13 @@
             </div>
         </section>
 
+        <!-- Page 6.5: conclustion -->
+        <section class="page" id="page6.5">
+            <div class="content-wrapper">
+                <div id="scatterplot-chart"></div>
+            </div>
+        </section>
+
         <!-- Page 7: End Page -->
         <section class="page" id="page7">
             <div class="content-wrapper">
@@ -135,5 +143,6 @@
     <script src="js/barchart.js"></script>
     <script src="js/linechart.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/conclusion.js"></script>
 </body>
 </html> 
