edited title position

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <!-- Page 5: Line Chart -->
         <section class="page" id="page5">
             <div class="content-wrapper">
+                <h1 class="main-title">How does the ranking change over time?</h1>
                 <div class="chart-wrapper">
                     <div class="line-chart-container">
                         <div id="line-chart"></div>
