--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
             </div>
         </section>
 
-        <!-- Page 5: Timeline -->
+        <!-- Page 5: Line Chart -->
         <section class="page" id="page5">
             <div class="content-wrapper">
-                <img src="img/linechart.pic.jpg" alt="Line Chart" style="width: 100%; height: 100vh; object-fit: contain;">
-                <div id="timeline-chart"></div>
+                <div class="chart-wrapper">
+                    <div class="line-chart-container">
+                        <div id="line-chart"></div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -131,6 +134,7 @@
     <script src="js/scatterplot.js"></script>
     <script src="js/radar.js"></script>
     <script src="js/barchart.js"></script>
+    <script src="js/linechart.js"></script>
     <script src="js/main.js"></script>
     <script src="js/conclusion.js"></script>
 </body>
