--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             </div>
         </section>
 
+        <!-- Page 3.5: Transition -->
+        <section class="page" id="page3-5">
+                <div class="transition-container">
+                    <h2>Find the Best School for You</h2>
+                    <p>University rankings not only reflect the overall strength of institutions but also highlight regional differences in teaching quality, research excellence, and international influence. For prospective students, understanding the relationship between geographic location and key ranking factors can be crucial in making an informed decision.</p>
+                    <p>To make these complex datasets more intuitive, we'll now visualize the distribution and performance of universities worldwide.</p>
+                </div>
+            
+        </section>
+
         <!-- Page 4: World Map with Radar and Bar Chart -->
         <section class="page" id="page4">
             <div class="content-wrapper">
@@ -113,6 +123,7 @@
         <nav class="page-nav">
             <ul>
                 <li class="active"></li>
+                <li></li>
                 <li></li>
                 <li></li>
                 <li></li>
