finished updating connection page

--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
             </div>
         </section>
 
+        <!-- Page 4.5: Trends in University Rankings -->
+        <section class="page" id="page4-5">
+            <div class="transition-container">
+                <h2>How University Rankings Evolve Over Time</h2>
+                <p>University rankings are constantly shifting due to advancements in research, changes in faculty quality, funding, and global collaborations. By analyzing historical performance trends, we can see which universities are rising, which are maintaining their positions, and how external factors influence these shifts.</p>
+                <p>This interactive visualization allows you to explore ranking trends over the years and track the progress of specific universities.</p>
+            </div>
+        
+        </section>
+
         <!-- Page 5: Line Chart -->
         <section class="page" id="page5">
             <div class="content-wrapper">
@@ -95,6 +105,15 @@
                         <div id="line-chart"></div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Page 5.5: Transition -->
+        <section class="page" id="page5-5">
+            <div class="transition-container">
+                <h2>Understanding Ranking Factors</h2>
+                <p>University rankings are complex systems where different factors interact and influence each other. Teaching quality often correlates with research output, while international outlook can boost both academic and industry partnerships. Understanding these relationships is crucial for institutions aiming to improve their global standing.</p>
+                <p>Let's explore how these various ranking factors work together to shape institutional success and what this means for universities worldwide.</p>
             </div>
         </section>
 
