--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             </div>
         </section>
 
+        <!-- Page 3.5: Transition -->
+        <section class="page" id="page3-5">
+                <div class="transition-container">
+                    <h2>Find the Best School for You</h2>
+                    <p>University rankings not only reflect the overall strength of institutions but also highlight regional differences in teaching quality, research excellence, and international influence. For prospective students, understanding the relationship between geographic location and key ranking factors can be crucial in making an informed decision.</p>
+                    <p>To make these complex datasets more intuitive, we'll now visualize the distribution and performance of universities worldwide.</p>
+                </div>
+            
+        </section>
+
         <!-- Page 4: World Map with Radar and Bar Chart -->
         <section class="page" id="page4">
             <div class="content-wrapper">
@@ -77,6 +87,16 @@
             </div>
         </section>
 
+        <!-- Page 4.5: Trends in University Rankings -->
+        <section class="page" id="page4-5">
+            <div class="transition-container">
+                <h2>How University Rankings Evolve Over Time</h2>
+                <p>University rankings are constantly shifting due to advancements in research, changes in faculty quality, funding, and global collaborations. By analyzing historical performance trends, we can see which universities are rising, which are maintaining their positions, and how external factors influence these shifts.</p>
+                <p>This interactive visualization allows you to explore ranking trends over the years and track the progress of specific universities.</p>
+            </div>
+        
+        </section>
+
         <!-- Page 5: Line Chart -->
         <section class="page" id="page5">
             <div class="content-wrapper">
@@ -85,6 +105,15 @@
                         <div id="line-chart"></div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Page 5.5: Transition -->
+        <section class="page" id="page5-5">
+            <div class="transition-container">
+                <h2>Understanding Ranking Factors</h2>
+                <p>University rankings are complex systems where different factors interact and influence each other. Teaching quality often correlates with research output, while international outlook can boost both academic and industry partnerships. Understanding these relationships is crucial for institutions aiming to improve their global standing.</p>
+                <p>Let's explore how these various ranking factors work together to shape institutional success and what this means for universities worldwide.</p>
             </div>
         </section>
 
@@ -113,6 +142,7 @@
         <nav class="page-nav">
             <ul>
                 <li class="active"></li>
+                <li></li>
                 <li></li>
                 <li></li>
                 <li></li>
