--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>University Rankings Analysis</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;500;600;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Continuous background image -->
