conclusion page font changed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- Page 6.5: conclustion -->
         <section class="page" id="page6.5">
             <div class="content-wrapper">
-                <div id="scatterplot-chart"></div>
+                <div id="conclusion"></div>
             </div>
         </section>
 
